--- a/calculator.css
+++ b/calculator.css
@@ -13,7 +13,7 @@ table{
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 input[type="button"]{
-    background-color: blue;
+    background-color: #ADD8E6;
     height: 100%;
     width: 100%;
 }
